--- a/v3.0.2/ht/files/新增网店商品1/styles.css
+++ b/v3.0.2/ht/files/新增网店商品1/styles.css
@@ -1610,7 +1610,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -1625,7 +1625,7 @@
   width:150px;
   height:170px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -1772,7 +1772,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -1787,7 +1787,7 @@
   width:150px;
   height:170px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -14225,7 +14225,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -14238,7 +14238,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -14271,7 +14271,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -14299,7 +14299,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -17230,7 +17230,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -17243,7 +17243,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -17276,7 +17276,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -17304,7 +17304,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20497,7 +20497,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20510,7 +20510,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20543,7 +20543,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20571,7 +20571,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
