--- a/v3.0.2/ht/files/新增网店商品2/styles.css
+++ b/v3.0.2/ht/files/新增网店商品2/styles.css
@@ -2278,7 +2278,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2293,7 +2293,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2329,7 +2329,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2344,7 +2344,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2380,7 +2380,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2395,7 +2395,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2431,7 +2431,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2446,7 +2446,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2482,7 +2482,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2497,7 +2497,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2533,7 +2533,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2548,7 +2548,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2584,7 +2584,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2599,7 +2599,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2635,7 +2635,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2650,7 +2650,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2686,7 +2686,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2701,7 +2701,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2737,7 +2737,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -2752,7 +2752,7 @@
   width:100px;
   height:100px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:48px;
