--- a/v3.0.2/ht/files/新增门店商品1/styles.css
+++ b/v3.0.2/ht/files/新增门店商品1/styles.css
@@ -1409,7 +1409,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -1424,7 +1424,7 @@
   width:150px;
   height:170px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -1571,7 +1571,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -1586,7 +1586,7 @@
   width:150px;
   height:170px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   font-size:72px;
@@ -13881,7 +13881,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -13894,7 +13894,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -13927,7 +13927,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -13955,7 +13955,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -16886,7 +16886,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -16899,7 +16899,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -16932,7 +16932,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -16960,7 +16960,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20153,7 +20153,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20166,7 +20166,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20199,7 +20199,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -20227,7 +20227,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
