--- a/v3.0.2/ht/files/商品分类/styles.css
+++ b/v3.0.2/ht/files/商品分类/styles.css
@@ -2985,7 +2985,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -2998,7 +2998,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -3031,7 +3031,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -3059,7 +3059,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -4952,7 +4952,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -4965,7 +4965,7 @@
   width:40px;
   height:30px;
   display:flex;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -4998,7 +4998,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
@@ -5026,7 +5026,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome';
+  font-family:'FontAwesome', 'FontAwesome Regular';
   font-weight:400;
   font-style:normal;
   color:#999999;
