--- a/brnn/files/发牌流程/styles.css
+++ b/brnn/files/发牌流程/styles.css
@@ -17,7 +17,7 @@
   position:absolute;
   z-index:0;
 }
-#u39_div {
+#u61_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -45,7 +45,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u39 {
+#u61 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -57,27 +57,27 @@
   font-weight:400;
   font-style:normal;
 }
-#u39 .text {
+#u61 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u39_text {
+#u61_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u40 {
+#u62 {
   border-width:0px;
   position:absolute;
   left:12px;
   top:99px;
   width:988px;
-  height:350px;
+  height:175px;
 }
-#u41_img {
+#u63_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -85,7 +85,7 @@
   width:156px;
   height:35px;
 }
-#u41 {
+#u63 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -99,19 +99,19 @@
   font-size:13px;
   text-align:left;
 }
-#u41 .text {
+#u63 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u41_text {
+#u63_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u42_img {
+#u64_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -119,7 +119,7 @@
   width:832px;
   height:35px;
 }
-#u42 {
+#u64 {
   border-width:0px;
   position:absolute;
   left:156px;
@@ -133,19 +133,19 @@
   font-size:13px;
   text-align:left;
 }
-#u42 .text {
+#u64 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u42_text {
+#u64_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u43_img {
+#u65_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -153,7 +153,7 @@
   width:156px;
   height:35px;
 }
-#u43 {
+#u65 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -167,20 +167,20 @@
   font-size:13px;
   text-align:left;
 }
-#u43 .text {
+#u65 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u43_text {
+#u65_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u44_img {
+#u66_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -188,7 +188,7 @@
   width:832px;
   height:35px;
 }
-#u44 {
+#u66 {
   border-width:0px;
   position:absolute;
   left:156px;
@@ -202,20 +202,20 @@
   font-size:13px;
   text-align:left;
 }
-#u44 .text {
+#u66 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u44_text {
+#u66_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u45_img {
+#u67_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -223,7 +223,7 @@
   width:156px;
   height:35px;
 }
-#u45 {
+#u67 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,20 +237,20 @@
   font-size:13px;
   text-align:left;
 }
-#u45 .text {
+#u67 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u45_text {
+#u67_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u46_img {
+#u68_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -258,7 +258,7 @@
   width:832px;
   height:35px;
 }
-#u46 {
+#u68 {
   border-width:0px;
   position:absolute;
   left:156px;
@@ -272,20 +272,20 @@
   font-size:13px;
   text-align:left;
 }
-#u46 .text {
+#u68 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u46_text {
+#u68_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u47_img {
+#u69_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -293,7 +293,7 @@
   width:156px;
   height:35px;
 }
-#u47 {
+#u69 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -307,20 +307,20 @@
   font-size:13px;
   text-align:left;
 }
-#u47 .text {
+#u69 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u47_text {
+#u69_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u48_img {
+#u70_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -328,7 +328,7 @@
   width:832px;
   height:35px;
 }
-#u48 {
+#u70 {
   border-width:0px;
   position:absolute;
   left:156px;
@@ -342,20 +342,20 @@
   font-size:13px;
   text-align:left;
 }
-#u48 .text {
+#u70 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u48_text {
+#u70_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u49_img {
+#u71_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -363,7 +363,7 @@
   width:156px;
   height:35px;
 }
-#u49 {
+#u71 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -377,20 +377,20 @@
   font-size:13px;
   text-align:left;
 }
-#u49 .text {
+#u71 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u49_text {
+#u71_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u50_img {
+#u72_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -398,7 +398,7 @@
   width:832px;
   height:35px;
 }
-#u50 {
+#u72 {
   border-width:0px;
   position:absolute;
   left:156px;
@@ -412,370 +412,20 @@
   font-size:13px;
   text-align:left;
 }
-#u50 .text {
+#u72 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u50_text {
+#u72_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u51_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:156px;
-  height:35px;
-}
-#u51 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:175px;
-  width:156px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u51 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u51_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u52_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:832px;
-  height:35px;
-}
-#u52 {
-  border-width:0px;
-  position:absolute;
-  left:156px;
-  top:175px;
-  width:832px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u52 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u52_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u53_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:156px;
-  height:35px;
-}
-#u53 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:210px;
-  width:156px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u53 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u53_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u54_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:832px;
-  height:35px;
-}
-#u54 {
-  border-width:0px;
-  position:absolute;
-  left:156px;
-  top:210px;
-  width:832px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u54 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u54_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u55_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:156px;
-  height:35px;
-}
-#u55 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:245px;
-  width:156px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u55 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u55_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u56_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:832px;
-  height:35px;
-}
-#u56 {
-  border-width:0px;
-  position:absolute;
-  left:156px;
-  top:245px;
-  width:832px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u56 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u56_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u57_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:156px;
-  height:35px;
-}
-#u57 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:280px;
-  width:156px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u57 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u57_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u58_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:832px;
-  height:35px;
-}
-#u58 {
-  border-width:0px;
-  position:absolute;
-  left:156px;
-  top:280px;
-  width:832px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u58 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u58_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u59_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:156px;
-  height:35px;
-}
-#u59 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:315px;
-  width:156px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u59 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u59_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u60_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:832px;
-  height:35px;
-}
-#u60 {
-  border-width:0px;
-  position:absolute;
-  left:156px;
-  top:315px;
-  width:832px;
-  height:35px;
-  display:flex;
-  font-family:'MicrosoftYaHei', '微软雅黑';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-align:left;
-}
-#u60 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u60_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u61_div {
+#u73_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -794,7 +444,7 @@
   font-style:normal;
   color:#555555;
 }
-#u61 {
+#u73 {
   border-width:0px;
   position:absolute;
   left:12px;
@@ -807,19 +457,19 @@
   font-style:normal;
   color:#555555;
 }
-#u61 .text {
+#u73 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u61_text {
+#u73_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u62_div {
+#u74_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -840,11 +490,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u62 {
+#u74 {
   border-width:0px;
   position:absolute;
-  left:55px;
-  top:551px;
+  left:0px;
+  top:501px;
   width:100px;
   height:60px;
   display:flex;
@@ -852,19 +502,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u62 .text {
+#u74 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u62_text {
+#u74_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u63_div {
+#u75_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -885,11 +535,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u63 {
+#u75 {
   border-width:0px;
   position:absolute;
-  left:236px;
-  top:551px;
+  left:199px;
+  top:501px;
   width:100px;
   height:60px;
   display:flex;
@@ -897,19 +547,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u63 .text {
+#u75 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u63_text {
+#u75_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u64_div {
+#u76_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -930,11 +580,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u64 {
+#u76 {
   border-width:0px;
   position:absolute;
-  left:418px;
-  top:551px;
+  left:411px;
+  top:501px;
   width:100px;
   height:60px;
   display:flex;
@@ -942,89 +592,89 @@
   font-weight:400;
   font-style:normal;
 }
-#u64 .text {
+#u76 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u64_text {
+#u76_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u65 {
+#u77 {
   border-width:0px;
   position:absolute;
-  left:155px;
-  top:581px;
+  left:100px;
+  top:531px;
   width:0px;
   height:0px;
   font-size:13px;
 }
-#u65_seg0 {
+#u77_seg0 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:-5px;
-  width:86px;
+  width:104px;
   height:10px;
 }
-#u65_seg1 {
+#u77_seg1 {
   border-width:0px;
   position:absolute;
-  left:69px;
+  left:87px;
   top:-10px;
   width:20px;
   height:20px;
 }
-#u65_text {
+#u77_text {
   border-width:0px;
   position:absolute;
-  left:-10px;
+  left:0px;
   top:-8px;
   width:100px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u66 {
+#u78 {
   border-width:0px;
   position:absolute;
-  left:336px;
-  top:581px;
+  left:299px;
+  top:531px;
   width:0px;
   height:0px;
   font-size:13px;
 }
-#u66_seg0 {
+#u78_seg0 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:-5px;
-  width:87px;
+  width:117px;
   height:10px;
 }
-#u66_seg1 {
+#u78_seg1 {
   border-width:0px;
   position:absolute;
-  left:70px;
+  left:100px;
   top:-10px;
   width:20px;
   height:20px;
 }
-#u66_text {
+#u78_text {
   border-width:0px;
   position:absolute;
-  left:-9px;
+  left:6px;
   top:-8px;
   width:100px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u67_div {
+#u79_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1045,11 +695,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u67 {
+#u79 {
   border-width:0px;
   position:absolute;
-  left:599px;
-  top:551px;
+  left:613px;
+  top:501px;
   width:100px;
   height:60px;
   display:flex;
@@ -1057,47 +707,207 @@
   font-weight:400;
   font-style:normal;
 }
-#u67 .text {
+#u79 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u67_text {
+#u79_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u68 {
+#u80 {
   border-width:0px;
   position:absolute;
-  left:518px;
-  top:581px;
+  left:511px;
+  top:531px;
   width:0px;
   height:0px;
   font-size:13px;
 }
-#u68_seg0 {
+#u80_seg0 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:-5px;
-  width:86px;
+  width:107px;
   height:10px;
 }
-#u68_seg1 {
+#u80_seg1 {
   border-width:0px;
   position:absolute;
-  left:69px;
+  left:90px;
   top:-10px;
   width:20px;
   height:20px;
 }
-#u68_text {
+#u80_text {
+  border-width:0px;
+  position:absolute;
+  left:1px;
+  top:-8px;
+  width:100px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u81_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:60px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u81 {
+  border-width:0px;
+  position:absolute;
+  left:613px;
+  top:366px;
+  width:100px;
+  height:60px;
+  display:flex;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u81 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u81_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u82 {
+  border-width:0px;
+  position:absolute;
+  left:663px;
+  top:501px;
+  width:0px;
+  height:0px;
+  font-size:13px;
+}
+#u82_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-5px;
+  top:-75px;
+  width:10px;
+  height:80px;
+}
+#u82_seg1 {
   border-width:0px;
   position:absolute;
   left:-10px;
+  top:-83px;
+  width:20px;
+  height:20px;
+}
+#u82_text {
+  border-width:0px;
+  position:absolute;
+  left:-50px;
+  top:-46px;
+  width:100px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u83_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:60px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u83 {
+  border-width:0px;
+  position:absolute;
+  left:810px;
+  top:501px;
+  width:100px;
+  height:60px;
+  display:flex;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u83 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u83_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u84 {
+  border-width:0px;
+  position:absolute;
+  left:713px;
+  top:531px;
+  width:0px;
+  height:0px;
+  font-size:13px;
+}
+#u84_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:-5px;
+  width:102px;
+  height:10px;
+}
+#u84_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:85px;
+  top:-10px;
+  width:20px;
+  height:20px;
+}
+#u84_text {
+  border-width:0px;
+  position:absolute;
+  left:-2px;
   top:-8px;
   width:100px;
   word-wrap:break-word;
